kubernetes/mqtt.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vertx-mqtt
  labels:
    app: vertx-mqtt
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 60
  template:
    metadata:
      name: vertx-mqtt
      labels:
        app: vertx-mqtt
        hazelcast: h1

    spec:
      containers:
      - name: vertx-backend

        image: codepitbull/vertx-java-mqtt:4
        imagePullPolicy: Never

        resources:
          limits:
            cpu: "250m"
            memory: "250Mi"
          requests:
            cpu: "250m"
            memory: "250Mi"
